# python-challenge

./: .gitignore  .melli.py.swp  .pre-commit-config.yaml  .test_melli.py.swp  README.md  constants.py  db.py  dep.py  emilia.py  emilia_fixed.py  emiliaapp.code-workspace  melli.py  melli_old.py  messages.toml  pyproject.toml  requirements.txt  schemas.py  security.py  service.py  setup.cfg  test_emilia.py  test_melli.py  utils.py
.github/workflows/: push.yaml
app/: constants.py  db.py  dep.py  melli.py  services.py
